Add Companies section

--- a/pages/home.html
+++ b/pages/home.html
@@ -53,17 +53,29 @@
 
             <!-- Estadísticas -->
             <div class="stats">
-                <div>
-                    <span>25,850</span>
-                    <p>Jobs</p>
+                <div class="stat">
+                    <img src="../img/icons/bag.png" alt="bag">
+                    <div class="stat-count">
+                        <span>25,850</span>
+                        <p>Jobs</p>
+                    </div>
+                    
                 </div>
-                <div>
-                    <span>10,250</span>
-                    <p>Candidates</p>
+                <div class="stat">
+                    <img src="../img/icons/group.png" alt="candidates">
+                    <div class="stat-count">
+                        <span>10,250</span>
+                        <p>Candidates</p>
+                    </div>
+
                 </div>
-                <div>
-                    <span>18,400</span>
-                    <p>Companies</p>
+
+                <div class="stat">
+                    <img src="../img/icons/construction.png" alt="companies">
+                    <div class="stat-count">
+                        <span>18,400</span>
+                        <p>Companies</p>
+                    </div>
                 </div>
             </div>
         </section>
@@ -72,13 +84,12 @@
 
     <!-- Sección de empresas -->
     <section class="companies">
-        <h2>Trusted by Leading Companies</h2>
         <div class="company-logos">
-            <img src="spotify-logo.png" alt="Spotify">
-            <img src="slack-logo.png" alt="Slack">
-            <img src="adobe-logo.png" alt="Adobe">
-            <img src="asana-logo.png" alt="Asana">
-            <img src="linear-logo.png" alt="Linear">
+            <img src="../img/logos/Spotify_Full_Logo_RGB_White.png" alt="Spotify">
+            <img src="../img/logos/1707837093slack-logo-png-white.png" alt="Slack">
+            <img src="../img/logos/descarga.png" alt="Adobe">
+            <img src="../img/logos/ASAN_BIG.D-aed62503.png" alt="Asana">
+            <img src="../img/logos/Linkedin-logo-white-png-wordmark-icon-horizontal-900x233.png" alt="linkdin">
         </div>
     </section>
 
