Add Recent Jobs Section

--- a/pages/home.html
+++ b/pages/home.html
@@ -8,6 +8,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Work+Sans:ital,wght@0,100..900;1,100..900&display=swap"
         rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link rel="stylesheet" href="../styles/home.css">
     <title>Job Portal</title>
 </head>
@@ -48,7 +49,7 @@
                 <select>
                     <option>Select Category</option>
                 </select>
-                <button class="search-btn">🔍 Search Job</button>
+                <button class="search-btn"><i class="fas fa-search"></i> Search Job</button>
             </div>
 
             <!-- Estadísticas -->
@@ -92,6 +93,125 @@
             <img src="../img/logos/Linkedin-logo-white-png-wordmark-icon-horizontal-900x233.png" alt="linkdin">
         </div>
     </section>
+
+    <!-- Sección de Ofertas Recientes -->
+    <section class="recent-jobs">
+        <div class="container-jobs">
+            <h2>Recent Jobs Available</h2>
+            <div class="header">
+                <p>At eu lobortis pretium tristique amet lacus ut aenean aliquet...</p>
+                <a href="#" class="view-all">View all</a>
+            </div>
+
+            <div class="job-list">
+                <div class="job-card">
+                    <div class="job-meta">
+                        <span class="time-label">10 min ago</span>
+                        <i class="far fa-bookmark save-icon"></i>
+                    </div>
+                    <div class="job-header">
+                        <img src="https://upload.wikimedia.org/wikipedia/commons/1/19/Spotify_logo_without_text.svg" alt="Spotify" class="company-job-logo">
+                        <div class="job-details">
+                            <h3>Cybersecurity Director</h3>
+                            <p>Spotify</p>
+                        </div>
+                    </div>
+                    <div class="job-info">
+                        <span><i class="fas fa-music icons"></i> Music & Tech</span>
+                        <span><i class="fas fa-clock icons"></i> Full time</span>
+                        <span><i class="fa-solid fa-wallet icons"></i> $120000-$140000</span>
+                        <span><i class="fas fa-map-marker-alt icons"></i> Stockholm, Sweden</span>
+                        <button class="job-btn">Job Details</button>
+                    </div>
+                </div>
+
+                <div class="job-card">
+                    <div class="job-meta">
+                        <span class="time-label">12 min ago</span>
+                        <i class="far fa-bookmark save-icon"></i>
+                    </div>
+                    <div class="job-header">
+                        <img src="https://upload.wikimedia.org/wikipedia/commons/f/fa/Apple_logo_black.svg" alt="Apple" class="company-job-logo">
+                        <div class="job-details">
+                            <h3>UI/UX Designer</h3>
+                            <p>Apple</p>
+                        </div>
+                    </div>
+                    <div class="job-info">
+                        <span><i class="fas fa-mobile-alt icons"></i> Technology</span>
+                        <span><i class="fas fa-clock icons"></i> Part time</span>
+                        <span><i class="fa-solid fa-wallet icons"></i> $90000-$110000</span>
+                        <span><i class="fas fa-map-marker-alt icons"></i> Cupertino, USA</span>
+                        <button class="job-btn">Job Details</button>
+                    </div>
+                </div>
+
+                <div class="job-card">
+                    <div class="job-meta">
+                        <span class="time-label">15 min ago</span>
+                        <i class="far fa-bookmark save-icon"></i>
+                    </div>
+                    <div class="job-header">
+                        <img src='https://upload.wikimedia.org/wikipedia/commons/c/c1/Google_"G"_logo.svg' alt="Google" class="company-job-logo">
+                        <div class="job-details">
+                            <h3>Cloud Solutions Engineer</h3>
+                            <p>Google</p>
+                        </div>
+                    </div>
+                    <div class="job-info">
+                        <span><i class="fas fa-cloud icons"></i> Cloud Computing</span>
+                        <span><i class="fas fa-clock icons"></i> Full time</span>
+                        <span><i class="fa-solid fa-wallet icons"></i> $130000-$150000</span>
+                        <span><i class="fas fa-map-marker-alt icons"></i> Mountain View, USA</span>
+                        <button class="job-btn">Job Details</button>
+                    </div>
+                </div>
+
+                <div class="job-card">
+                    <div class="job-meta">
+                        <span class="time-label">24 min ago</span>
+                        <i class="far fa-bookmark save-icon"></i>
+                    </div>
+                    <div class="job-header">
+                        <img src="https://upload.wikimedia.org/wikipedia/commons/4/44/Microsoft_logo.svg" alt="Microsoft" class="company-job-logo">
+                        <div class="job-details">
+                            <h3>Software Engineer - AI</h3>
+                            <p>Microsoft</p>
+                        </div>
+                    </div>
+                    <div class="job-info">
+                        <span><i class="fas fa-laptop-code icons"></i> Software Development</span>
+                        <span><i class="fas fa-clock icons"></i> Full time</span>
+                        <span><i class="fa-solid fa-wallet icons"></i> $115000-$135000</span>
+                        <span><i class="fas fa-map-marker-alt icons"></i> Redmond, USA</span>
+                        <button class="job-btn">Job Details</button>
+                    </div>
+                </div>
+
+                <div class="job-card">
+                    <div class="job-meta">
+                        <span class="time-label">26 min ago</span>
+                        <i class="far fa-bookmark save-icon"></i>
+                    </div>
+                    <div class="job-header">
+                        <img src="https://upload.wikimedia.org/wikipedia/commons/4/4a/Amazon_icon.svg" alt="Amazon" class="company-job-logo">
+                        <div class="job-details">
+                            <h3>Data Scientist</h3>
+                            <p>Amazon</p>
+                        </div>
+                    </div>
+                    <div class="job-info">
+                        <span><i class="fas fa-chart-line icons"></i> E-commerce & AI</span>
+                        <span><i class="fas fa-clock icons"></i> Full time</span>
+                        <span><i class="fa-solid fa-wallet icons"></i> $125000-$145000</span>
+                        <span><i class="fas fa-map-marker-alt icons"></i> Seattle, USA</span>
+                        <button class="job-btn">Job Details</button>
+                    </div>
+                </div>
+            </div>
+            
+    </section>
+    
 
 </body>
 
