Add Categories & Info Sections

--- a/pages/home.html
+++ b/pages/home.html
@@ -8,9 +8,9 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Work+Sans:ital,wght@0,100..900;1,100..900&display=swap"
         rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link rel="stylesheet" href="../styles/home.css">
     <title>Job Portal</title>
+    <script src="https://kit.fontawesome.com/82bf3eaf6b.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
@@ -211,7 +211,96 @@
             </div>
             
     </section>
-    
+
+
+    <!-- Sección de Categorias -->
+    <section class="categories">
+        <div class="categories-header">
+            <h2>Browse by Category</h2>
+            <p>At eu lobortis pretium tincidunt amet lacus ut aenean aliquet. Blandit a massa elementum id scel...</p>
+        </div>
+        <div class="categories-grid">
+            <div class="category-card">
+                <i class="fa-solid fa-wheat-awn categories-icon"></i>     
+                <h3>Agriculture</h3>
+                <span class="jobs-count">1254 jobs</span>
+            </div>
+            <div class="category-card">
+                <i class="fa-solid fa-hammer categories-icon"></i>
+                <h3>Manufacturing</h3>
+                <span class="jobs-count">816 jobs</span>
+            </div>
+            <div class="category-card">
+                <i class="fa-solid fa-basket-shopping categories-icon"></i>
+                <h3>Commerce</h3>
+                <span class="jobs-count">2082 jobs</span>
+            </div>
+            <div class="category-card">
+                <i class="fa-solid fa-code categories-icon"></i>
+                <h3>Programing</h3>
+                <span class="jobs-count">1520 jobs</span>
+            </div>
+            <div class="category-card">
+                <i class="fa-solid fa-cart-flatbed-suitcase categories-icon"></i>
+                <h3>Hotels & Tourism</h3>
+                <span class="jobs-count">1022 jobs</span>
+            </div>
+            <div class="category-card">
+                <i class="fa-solid fa-user-graduate categories-icon"></i>
+                <h3>Education</h3>
+                <span class="jobs-count">1496 jobs</span>
+            </div>
+            <div class="category-card">
+                <i class="fa-solid fa-coins categories-icon"></i>
+                <h3>Financial Services</h3>
+                <span class="jobs-count">1529 jobs</span>
+            </div>
+            <div class="category-card">
+                <i class="fa-solid fa-bus-simple categories-icon"></i>
+                <h3>Transport</h3>
+                <span class="jobs-count">1244 jobs</span>
+            </div>
+        </div>
+    </section>
+
+    <!-- Sección de Info -->
+    <section class="info-section">
+        <div class="info-container">
+            <div class="info-image"></div>
+            <div class="info-text">
+                <h2>Good Life Begins With<br>A Good Company</h2>
+                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ipsa, illum debitis eos magni quia cum qui autem tempore molestiae atque amet veritatis, dolorum hic incidunt, ad nesciunt asperiores! Maxime, eos.</p>
+                <div class="info-buttons">
+                    <button class="btn-info primary">Search Job</button>
+                    <button class="btn-info secondary">Learn more</button>
+                </div>
+            </div>
+        </div>
+        <div class="info-stats">
+            <div class="stat-info">
+                <h3>12k+</h3>
+                <p class="subtitle">Clients worldwide</p>
+                <p>At eu lobortis pretium tincidunt amet lacus ut aenean aliquet...</p>
+            </div>
+            <div class="stat-info">
+                <h3>20k+</h3>
+                <p class="subtitle">Active resume</p>
+                <p>At eu lobortis pretium tincidunt amet lacus ut aenean aliquet...</p>
+            </div>
+            <div class="stat-info">
+                <h3>18k+</h3>
+                <p class="subtitle">Companies</p>
+                <p>At eu lobortis pretium tincidunt amet lacus ut aenean aliquet...</p>
+            </div>
+        </div>
+        <div class="cta-banner">
+            <div class="cta-text">
+                <h2>Create A Better Future For Yourself</h2>
+                <p>At eu lobortis pretium tincidunt amet lacus ut aenean aliquet...</p>
+                <button class="btn-info primary">Search Job</button>
+            </div>
+        </div>
+    </section>
 
 </body>
 
