add HTML structure for filters aside in main section

--- a/pages/jobs.html
+++ b/pages/jobs.html
@@ -49,8 +49,322 @@
     </header>
 
     <!-- MAIN SECTION-->
-    <main>
+    <main class="jobs">
+        <div class="jobs-wrapper">
 
+            <!-- Bloque de filtro-->
+            <aside class="jobs__filters-container">
+                
+                <!--Sección Buscar por titulo-->
+                <div class="jobs__filter-section">
+                    <h3 class="filters__tittle">Sort By</h3>
+                    <div class="filters__input-wrapper">
+                        <span class="filters__icon"></span>
+                        <i class="fa-solid fa-magnifying-glass"></i>
+                        <input type="text">
+                    </div>
+                </div>
+
+                <!--Sección Buscar por ubicación-->
+                <div class="jobs__filter-section">
+                    <h3 class="filters__tittle">Sort By</h3>
+                    <div class="filters__input-wrapper">
+                        <span class="filters__icon"></span>
+                        <i class="fa-solid fa-location-dot"></i>
+                        <select class="filters_location" id="filters-city">
+                            <option value="">Choose city</option>
+                        </select>
+                    </div>
+                </div>
+
+                <!--Inicio de Category-->
+                <div class="jobs__filter-section">
+                    <h3 class="filters__tittle">Category</h3>
+                    <ul class="filters__list">
+                        <!--Inicio de items-->
+                        <li class="filters__list-item">
+                            <label class="filters__checkbox-label" for="Commerce">
+                                Commerce
+                                <input type="checkbox" 
+                                class="filters__checkbox"
+                                name="Commerce" 
+                                id="Commerce">
+                                <span class="filters__count">10</span>
+                            </label>
+                        </li>
+
+                        <li class="filters__list-item">
+                            <label class="filters__checkbox-label" for="Telecomunications">
+                                Telecomunications
+                                <input type="checkbox" 
+                                class="filters__checkbox"
+                                name="Telecomunications" 
+                                id="Telecomunications">
+                                <span class="filters__count">10</span>
+                            </label>
+                        </li>
+
+                        <li class="filters__list-item">
+                            <label class="filters__checkbox-label" for="Hotels-Tourism">
+                                Hotels & Tourism
+                                <input type="checkbox" 
+                                class="filters__checkbox"
+                                name="Hotels-Tourism" 
+                                id="Hotels-Tourism">
+                                <span class="filters__count">10</span>
+                            </label>
+                        </li>
+
+                        <li class="filters__list-item">
+                            <label class="filters__checkbox-label" for="Education">
+                                Education
+                                <input type="checkbox" 
+                                class="filters__checkbox"
+                                name="Education" 
+                                id="Education">
+                                <span class="filters__count">10</span>
+                            </label>
+                        </li>
+
+                        <li class="filters__list-item">
+                            <label class="filters__checkbox-label" for="Financial-Services">
+                                Financial Services
+                                <input type="checkbox" 
+                                class="filters__checkbox"
+                                name="Financial-Services" 
+                                id="Financial-Services">
+                                <span class="filters__count">10</span>
+                            </label>
+                        </li>
+                        <!--Fin de items-->
+                    </ul>
+                </div>
+                <!--Fin de Category-->
+
+                <!--Inicio de JobType-->
+                <div class="jobs__filter-section">
+                    <h3 class="filters__tittle">Job Type</h3>
+                    <ul class="filters__list">
+                        <!--Inicio de items-->
+                        <li class="filters__list-item">
+                            <label class="filters__checkbox-label" for="Full-time">
+                                Full Time
+                                <input type="checkbox" 
+                                class="filters__checkbox"
+                                name="Full-time" 
+                                id="Full-time">
+                                <span class="filters__count">10</span>
+                            </label>
+                        </li>
+
+                        <li class="filters__list-item">
+                            <label class="filters__checkbox-label" for="Part-time">
+                                Part Time
+                                <input type="checkbox" 
+                                class="filters__checkbox"
+                                name="Part-time" 
+                                id="Part-time">
+                                <span class="filters__count">10</span>
+                            </label>
+                        </li>
+
+                        <li class="filters__list-item">
+                            <label class="filters__checkbox-label" for="Freelance">
+                                Freelance
+                                <input type="checkbox" 
+                                class="filters__checkbox"
+                                name="Freelance" 
+                                id="Freelance">
+                                <span class="filters__count">10</span>
+                            </label>
+                        </li>
+
+                        <li class="filters__list-item">
+                            <label class="filters__checkbox-label" for="Seasonal">
+                                Seasonal
+                                <input type="checkbox" 
+                                class="filters__checkbox"
+                                name="Seasonal" 
+                                id="Seasonal">
+                                <span class="filters__count">10</span>
+                            </label>
+                        </li>
+
+                        <li class="filters__list-item">
+                            <label class="filters__checkbox-label" for="Fixed-Price">
+                                Fixed Price
+                                <input type="checkbox" 
+                                class="filters__checkbox"
+                                name="Fixed-Price" 
+                                id="Fixed-Price">
+                                <span class="filters__count">10</span>
+                            </label>
+                        </li>
+                        <!--Fin de items-->
+                    </ul>
+                </div>
+                <!--Fin de JobType-->
+
+                <!--Inicio de Experience Level-->
+                <div class="jobs__filter-section">
+                    <h3 class="filters__tittle">Experience Level</h3>
+                    <ul class="filters__list">
+                        <!--Inicio de items-->
+                        <li class="filters__list-item">
+                            <label class="filters__checkbox-label" for="No-experience">
+                                No-experience
+                                <input type="checkbox" 
+                                class="filters__checkbox"
+                                name="No-experience" 
+                                id="No-experience">
+                                <span class="filters__count">10</span>
+                            </label>
+                        </li>
+
+                        <li class="filters__list-item">
+                            <label class="filters__checkbox-label" for="Fresher">
+                                Fresher
+                                <input type="checkbox" 
+                                class="filters__checkbox"
+                                name="Fresher" 
+                                id="Fresher">
+                                <span class="filters__count">10</span>
+                            </label>
+                        </li>
+
+                        <li class="filters__list-item">
+                            <label class="filters__checkbox-label" for="Intermediate">
+                                Intermediate
+                                <input type="checkbox" 
+                                class="filters__checkbox"
+                                name="Intermediate" 
+                                id="Intermediate">
+                                <span class="filters__count">10</span>
+                            </label>
+                        </li>
+
+                        <li class="filters__list-item">
+                            <label class="filters__checkbox-label" for="Expert">
+                                Expert
+                                <input type="checkbox" 
+                                class="filters__checkbox"
+                                name="Expert" 
+                                id="Expert">
+                                <span class="filters__count">10</span>
+                            </label>
+                        </li>
+                        <!--Fin de items-->
+                    </ul>
+                </div>
+                <!--Fin de Experience Level-->
+
+                <!--Inicio de Date Posted-->
+                <div class="jobs__filter-section">
+                    <h3 class="filters__tittle">Date Posted</h3>
+                    <ul class="filters__list">
+                        <!--Inicio de items-->
+                        <li class="filters__list-item">
+                            <label class="filters__checkbox-label" for="All">
+                                All
+                                <input type="checkbox" 
+                                class="filters__checkbox"
+                                name="All" 
+                                id="All">
+                                <span class="filters__count">10</span>
+                            </label>
+                        </li>
+
+                        <li class="filters__list-item">
+                            <label class="filters__checkbox-label" for="Last-Hour">
+                                Last Hour
+                                <input type="checkbox" 
+                                class="filters__checkbox"
+                                name="Last-Hour" 
+                                id="Last-Hour">
+                                <span class="filters__count">10</span>
+                            </label>
+                        </li>
+
+                        <li class="filters__list-item">
+                            <label class="filters__checkbox-label" for="Last-24-Hours">
+                                Last 24 Hours
+                                <input type="checkbox" 
+                                class="filters__checkbox"
+                                name="Last-24-Hours" 
+                                id="Last-24-Hours">
+                                <span class="filters__count">10</span>
+                            </label>
+                        </li>
+
+                        <li class="filters__list-item">
+                            <label class="filters__checkbox-label" for="Last-7-Days">
+                                Last 7 Days
+                                <input type="checkbox" 
+                                class="filters__checkbox"
+                                name="Last-7-Days" 
+                                id="Last-7-Days">
+                                <span class="filters__count">10</span>
+                            </label>
+                        </li>
+
+                        <li class="filters__list-item">
+                            <label class="filters__checkbox-label" for="Last-30-Days">
+                                Last 30 Days
+                                <input type="checkbox" 
+                                class="filters__checkbox"
+                                name="Last-30-Days" 
+                                id="Last-30-Days">
+                                <span class="filters__count">10</span>
+                            </label>
+                        </li>
+                        <!--Fin de items-->
+                    </ul>
+                </div>
+                <!--Fin de Date Posted-->
+
+                <!--Inicio de Salary Range-->
+                <!--Fin de Salary Range-->
+
+                <!--Inicio de Tags-->
+                <div class="jobs__filter-section">
+                    <h3 class="filters__tittle">Tags</h3>
+                    <!--Inicio de items-->
+                    <span class="jobs-count">engineering</span>
+                    <span class="jobs-count">design</span>
+                    <span class="jobs-count">ui/ux</span>
+                    <span class="jobs-count">marketing</span>
+                    <span class="jobs-count">management</span>
+                    <span class="jobs-count">soft</span>
+                    <span class="jobs-count">construction</span>
+
+                    <!--Fin de items-->
+                </div>
+                <!--Fin de Tags-->
+            </aside>
+
+            <!-- Bloque de trabajos disponibles-->
+            <section class="jobs__jobs-container">
+                <div class="jobs-sorted-container">
+                    <div class="jobs__sorted-by">
+                        <span>Showing 6-6 of 10 results</span>
+                        <select name="sorted-by" id="sorted-by">
+                            <option value="newest">Latest</option>
+                            <option value="oldest">Oldest</option>
+                            <option value="salary">Salary</option>
+                            <option value="location">Location</option>
+                    </div>
+
+                </div>
+                <div class="jobs__list">
+                    <div class="jobs__card">
+
+                    </div>
+                </div>
+                <div class="jobs__pagination">
+
+                </div>
+            </section>
+        </div>
     </main>
     
     <!-- Sección de Ofertas Recientes 
