Fix html structure for list-items

--- a/pages/jobs.html
+++ b/pages/jobs.html
@@ -57,7 +57,7 @@
                 
                 <!--Sección Buscar por titulo-->
                 <div class="jobs__filter-section">
-                    <h3 class="filters__tittle">Sort By</h3>
+                    <h3 class="filters__tittle">Search by Job Title</h3>
                     <div class="filters__input-wrapper">
                         <span class="filters__icon"></span>
                         <i class="fa-solid fa-magnifying-glass"></i>
@@ -89,8 +89,8 @@
                                 class="filters__checkbox"
                                 name="Commerce" 
                                 id="Commerce">
-                                <span class="filters__count">10</span>
                             </label>
+                            <span class="filters__count">10</span>
                         </li>
 
                         <li class="filters__list-item">
@@ -100,8 +100,8 @@
                                 class="filters__checkbox"
                                 name="Telecomunications" 
                                 id="Telecomunications">
-                                <span class="filters__count">10</span>
                             </label>
+                            <span class="filters__count">10</span>
                         </li>
 
                         <li class="filters__list-item">
@@ -111,8 +111,8 @@
                                 class="filters__checkbox"
                                 name="Hotels-Tourism" 
                                 id="Hotels-Tourism">
-                                <span class="filters__count">10</span>
                             </label>
+                            <span class="filters__count">10</span>
                         </li>
 
                         <li class="filters__list-item">
@@ -122,8 +122,8 @@
                                 class="filters__checkbox"
                                 name="Education" 
                                 id="Education">
-                                <span class="filters__count">10</span>
                             </label>
+                            <span class="filters__count">10</span>
                         </li>
 
                         <li class="filters__list-item">
@@ -133,11 +133,14 @@
                                 class="filters__checkbox"
                                 name="Financial-Services" 
                                 id="Financial-Services">
-                                <span class="filters__count">10</span>
                             </label>
+                            <span class="filters__count">10</span>
                         </li>
                         <!--Fin de items-->
                     </ul>
+                    <div class="filters__category">
+                        <input type="button" value="Show more">
+                    </div>
                 </div>
                 <!--Fin de Category-->
 
@@ -153,8 +156,8 @@
                                 class="filters__checkbox"
                                 name="Full-time" 
                                 id="Full-time">
-                                <span class="filters__count">10</span>
                             </label>
+                            <span class="filters__count">10</span>
                         </li>
 
                         <li class="filters__list-item">
@@ -164,8 +167,8 @@
                                 class="filters__checkbox"
                                 name="Part-time" 
                                 id="Part-time">
-                                <span class="filters__count">10</span>
                             </label>
+                            <span class="filters__count">10</span>
                         </li>
 
                         <li class="filters__list-item">
@@ -175,8 +178,8 @@
                                 class="filters__checkbox"
                                 name="Freelance" 
                                 id="Freelance">
-                                <span class="filters__count">10</span>
                             </label>
+                            <span class="filters__count">10</span>
                         </li>
 
                         <li class="filters__list-item">
@@ -186,8 +189,8 @@
                                 class="filters__checkbox"
                                 name="Seasonal" 
                                 id="Seasonal">
-                                <span class="filters__count">10</span>
                             </label>
+                            <span class="filters__count">10</span>
                         </li>
 
                         <li class="filters__list-item">
@@ -197,8 +200,8 @@
                                 class="filters__checkbox"
                                 name="Fixed-Price" 
                                 id="Fixed-Price">
-                                <span class="filters__count">10</span>
                             </label>
+                            <span class="filters__count">10</span>
                         </li>
                         <!--Fin de items-->
                     </ul>
@@ -217,8 +220,8 @@
                                 class="filters__checkbox"
                                 name="No-experience" 
                                 id="No-experience">
-                                <span class="filters__count">10</span>
                             </label>
+                            <span class="filters__count">10</span>
                         </li>
 
                         <li class="filters__list-item">
@@ -228,8 +231,8 @@
                                 class="filters__checkbox"
                                 name="Fresher" 
                                 id="Fresher">
-                                <span class="filters__count">10</span>
                             </label>
+                            <span class="filters__count">10</span>
                         </li>
 
                         <li class="filters__list-item">
@@ -239,8 +242,8 @@
                                 class="filters__checkbox"
                                 name="Intermediate" 
                                 id="Intermediate">
-                                <span class="filters__count">10</span>
                             </label>
+                            <span class="filters__count">10</span>
                         </li>
 
                         <li class="filters__list-item">
@@ -250,8 +253,8 @@
                                 class="filters__checkbox"
                                 name="Expert" 
                                 id="Expert">
-                                <span class="filters__count">10</span>
                             </label>
+                            <span class="filters__count">10</span>
                         </li>
                         <!--Fin de items-->
                     </ul>
@@ -270,8 +273,8 @@
                                 class="filters__checkbox"
                                 name="All" 
                                 id="All">
-                                <span class="filters__count">10</span>
                             </label>
+                            <span class="filters__count">10</span>
                         </li>
 
                         <li class="filters__list-item">
@@ -281,8 +284,8 @@
                                 class="filters__checkbox"
                                 name="Last-Hour" 
                                 id="Last-Hour">
-                                <span class="filters__count">10</span>
                             </label>
+                            <span class="filters__count">10</span>
                         </li>
 
                         <li class="filters__list-item">
@@ -292,8 +295,8 @@
                                 class="filters__checkbox"
                                 name="Last-24-Hours" 
                                 id="Last-24-Hours">
-                                <span class="filters__count">10</span>
                             </label>
+                            <span class="filters__count">10</span>
                         </li>
 
                         <li class="filters__list-item">
@@ -303,8 +306,8 @@
                                 class="filters__checkbox"
                                 name="Last-7-Days" 
                                 id="Last-7-Days">
-                                <span class="filters__count">10</span>
                             </label>
+                            <span class="filters__count">10</span>
                         </li>
 
                         <li class="filters__list-item">
@@ -314,8 +317,8 @@
                                 class="filters__checkbox"
                                 name="Last-30-Days" 
                                 id="Last-30-Days">
-                                <span class="filters__count">10</span>
                             </label>
+                            <span class="filters__count">10</span>
                         </li>
                         <!--Fin de items-->
                     </ul>
