Add Header Responsive (Incomplete)

--- a/pages/home.html
+++ b/pages/home.html
@@ -58,6 +58,7 @@
                 <select>
                     <option>Select Category</option>
                 </select>
+                <div class="divider last"></div>
                 <button class="search-btn"><i class="fas fa-search"></i> Search Job</button>
             </div>
 
